Add map-based apiary location
