# backend/app/Http/Requests/Rucher/UpdateRucherRequest.php
@@ -25,6 +25,8 @@ class UpdateRucherRequest extends FormRequest
         return [
             'name' => ['required', 'string', 'max:255'],
             'localisation' => ['required', 'string', 'max:255'],
+            'latitude' => ['required', 'numeric', 'between:-90,90'],
+            'longitude' => ['required', 'numeric', 'between:-180,180'],
             'description' => ['nullable', 'string'],
             'nb_emplacements' => ['required', 'integer', 'min:0'],
         ];
