# backend/app/Models/Rucher.php
@@ -10,9 +10,17 @@ use Illuminate\Database\Eloquent\Relations\HasMany;
 use App\Models\User;
 use App\Models\Ruche;
 
-#[Fillable(['user_id', 'name', 'localisation', 'description', 'nb_emplacements'])]
+#[Fillable(['user_id', 'name', 'localisation', 'latitude', 'longitude', 'description', 'nb_emplacements'])]
 class Rucher extends Model
 {
+    protected function casts(): array
+    {
+        return [
+            'latitude' => 'float',
+            'longitude' => 'float',
+        ];
+    }
+
     public function user()
     {
         return $this->belongsTo(User::class);
